fix image on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -36,7 +36,7 @@ body {
     }
 
     .image-container {
-        max-width: 60%;
+        max-width: 70%;
     }
 
     #title_desktop {
